# rustel_ehr_query_api

./: .gitignore  LICENSE  README.md
rustel_query/: Cargo.toml  Rocket.toml
rustel_query/src/: main.rs  timing.rs
rustel_query/src/apis/: cde_api.rs  eii_api.rs  event_api.rs  mod.rs  patient_api.rs  temporal_query_api.rs
rustel_query/src/database/: mongodb.rs
rustel_query/src/models/: cde.rs  eii.rs  event.rs  fc.rs  mod.rs  tcde.rs
