[package]
name = "rustel_query"
version = "0.1.0"
edition = "2024"

[dependencies]
rocket = { version = "0.5.0", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
mongodb = "2.8"  # MongoDB driver for Rust
dotenv = "0.15"  # Load environment variables
