[package]
name = "rustel_query"
version = "0.1.0"
edition = "2024"

[dependencies]
rocket = {version = "0.5.1", features = ["json"]}
serde = "1.0.136"
dotenv = "0.15.0"
maplit = "1.0.2"
serde_json = "1.0"
percent-encoding = "2.1"
futures = "0.3"

[dependencies.mongodb]
version = "2.2.0"
default-features = false
features = ["sync"] 